--- a/.htaccess
+++ b/.htaccess
@@ -5,10 +5,10 @@
 FileETag None
 
 RewriteEngine On
-
+RewriteRule .* - [E=HTTP_AUTHORISATION:%{HTTP:Authorization}]
 RewriteCond %{REQUEST_FILENAME} !-f
 #redirect to our front web controller
-RewriteRule ^(.*)$ index.php?page=$1 [QSA,L]
+RewriteRule ^(.*)$ index.php?page=$1&auth=%{HTTP:Authorization} [QSA,L]
 
 FileETag None
 <IfModule mod_headers.c>
